--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Chat App</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css?ver=0.1">
     </head>
 <body>
     <div class="container">
@@ -17,6 +17,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Faker/3.1.0/faker.min.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js?ver=0.1"></script>
 </body>
 </html>
